# talk-loco-client-rs

./: Cargo.toml  readme.md
examples/: booking.rs  checkin.rs  client.rs  talk.rs
src/: lib.rs  stream.rs
src/client/: booking.rs  checkin.rs  mod.rs  talk.rs
src/client/talk/: channel.rs  mod.rs
src/command/: codec.rs  manager.rs  mod.rs  session.rs
src/request/booking/: get_conf.rs  mod.rs
src/request/chat/: chat_info.rs  chat_on_room.rs  delete_msg.rs  forward.rs  get_mem.rs  get_trailer.rs  l_chat_list.rs  leave.rs  login_list.rs  member.rs  mod.rs  noti_read.rs  set_meta.rs  set_st.rs  sync_msg.rs  update_chat.rs  write.rs
src/request/checkin/: buy_cs.rs  checkin.rs  mod.rs
src/response/booking/: get_conf.rs
src/response/chat/: chat_info.rs  chat_on_room.rs  chg_meta.rs  delete_msg.rs  forward.rs  get_mem.rs  get_trailer.rs  l_chat_list.rs  leave.rs  login_list.rs  member.rs  mod.rs  msg.rs  set_meta.rs  sync.rs  sync_msg.rs  write.rs
src/response/checkin/: buy_cs.rs  checkin.rs  mod.rs
src/structs/: channel_info.rs  chat.rs  mod.rs  user.rs
